# NakuruTool_Avalonia_AOT

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  USER_GUIDE.md  USER_GUIDE.url  publish.bat  publish.ps1
.github/: copilot-instructions.md
.github/agents/: ExecuteManager.agent.md  ExecuteManager_Lite.agent.md  Plan_Custom.agent.md  Plan_Custom_Lite.agent.md  _sub_Architect_codex.agent.md  _sub_Architect_opus.agent.md  _sub_DiffVerify_codex.agent.md  _sub_DiffVerify_opus.agent.md  _sub_Implement.agent.md
Lame/: LameMp3Encoder.cs
NakuruTool_Avalonia_AOT/: NakuruTool_Avalonia_AOT.slnx
SoundTouch/: SoundTouch.cs
agent_tmp/: _old_ImportExportPageView.axaml  _old_ImportExportPageView.axaml.cs  _old_ImportExportPageViewModel.cs  integrated_design.md
docs/: ARCHITECTURE.md  BUILD.md  DATA_FLOW.md  MODULES.md  NATIVE_AOT.md  TESTING.md
native/nakuru_audio/: Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build.rs
native/nakuru_audio/src/: lib.rs
native/nakuru_rate_audio/: Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build.rs
native/nakuru_rate_audio/cpp/: bungee_bridge.cpp  bungee_bridge.h
native/nakuru_rate_audio/src/: error.rs  lib.rs  pipeline.rs
native/nakuru_rate_audio/src/decode/: mod.rs  symphonia_decoder.rs
native/nakuru_rate_audio/src/encode/: lame.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
native/nakuru_rate_audio/src/stretch/: bungee.rs  bungee_sys.rs  mod.rs
presets/: 7k_LN_Acc.90.0~91.0%.json  7k_LN_Acc.91.0~92.0%.json  7k_LN_Acc.92.0~93.0%.json  7k_LN_Acc.93.0~94.0%.json  7k_LN_Acc.94.0~95.0%.json  7k_LN_Acc.95.0~96.0%.json  7k_LN_Acc.96.0~97.0%.json  7k_LN_Acc.97.0~98.0%.json  7k_LN_Acc.98.0~99.0%.json  7k_LN_Acc.99.0~100.0%.json
scripts/: Download-Ffmpeg.ps1  publish-linux-arm64.sh
(+211 files in other folders)
