[package]
name = "nakuru_rate_audio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Offline audio rate conversion DLL for NakuruTool"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wav", "ogg", "mp3"]
wav = ["dep:hound"]
ogg = ["dep:vorbis_rs"]
mp3 = ["dep:libloading"]

[dependencies]
hound = { version = "3.5", optional = true }
libloading = { version = "0.8", optional = true }
once_cell = "1.21"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "ogg", "vorbis", "wav", "pcm"] }
thiserror = "2"
vorbis_rs = { version = "0.5", optional = true, default-features = false }

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
cmake = "0.1"
csbindgen = "1.9"
